--- a/SpaClient/package.json
+++ b/SpaClient/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-image-cropper": "^3.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
