--- a/SpaClient/package.json
+++ b/SpaClient/package.json
@@ -30,7 +30,9 @@
     "angular-auth-oidc-client": "^11.1.2",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.3",
     "ngx-bootstrap": "^5.6.1",
     "ngx-image-cropper": "^3.2.0",
     "rxjs": "~6.5.4",
